--- a/Web-Based-User-Management/Dockerfile
+++ b/Web-Based-User-Management/Dockerfile
@@ -31,6 +31,6 @@ ENV FLASK_APP=run.py
 ENV FLASK_ENV=development
 
 # Start the Flask app
-CMD ["flask", "run", "--host=0.0.0.0"]
+CMD ["python", "run.py"]
 
 
